e2e_output.txt
Traceback (most recent call last):
  File "<stdin>", line 37, in <module>
  File "C:\Program Files\Python312\Lib\asyncio\runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Program Files\Python312\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\Python312\Lib\asyncio\base_events.py", line 664, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "<stdin>", line 20, in test
  File "C:\Users\Administrator\AppData\Roaming\Python\Python312\site-packages\playwright\async_api\_generated.py", line 8567, in evaluate
    await self._impl_obj.evaluate(
  File "C:\Users\Administrator\AppData\Roaming\Python\Python312\site-packages\playwright\_impl\_page.py", line 464, in evaluate
    return await self._main_frame.evaluate(expression, arg)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Administrator\AppData\Roaming\Python\Python312\site-packages\playwright\_impl\_frame.py", line 320, in evaluate
    await self._channel.send(
  File "C:\Users\Administrator\AppData\Roaming\Python\Python312\site-packages\playwright\_impl\_connection.py", line 69, in send
    return await self._connection.wrap_api_call(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Administrator\AppData\Roaming\Python\Python312\site-packages\playwright\_impl\_connection.py", line 559, in wrap_api_call
    raise rewrite_error(error, f"{parsed_st['apiName']}: {error}") from None
playwright._impl._errors.Error: Page.evaluate: SyntaxError: Invalid or unexpected token
    at eval (<anonymous>)
    at UtilityScript.evaluate (<anonymous>:290:30)
    at UtilityScript.<anonymous> (<anonymous>:1:44)
Exception ignored in: <function StreamWriter.__del__ at 0x000001C44E91AB60>
Traceback (most recent call last):
  File "C:\Program Files\Python312\Lib\asyncio\streams.py", line 397, in __del__
  File "C:\Program Files\Python312\Lib\asyncio\streams.py", line 343, in close
  File "C:\Program Files\Python312\Lib\asyncio\proactor_events.py", line 109, in close
  File "C:\Program Files\Python312\Lib\asyncio\base_events.py", line 772, in call_soon
  File "C:\Program Files\Python312\Lib\asyncio\base_events.py", line 519, in _check_closed
RuntimeError: Event loop is closed
Exception ignored in: <function BaseSubprocessTransport.__del__ at 0x000001C44E9316C0>
Traceback (most recent call last):
  File "C:\Program Files\Python312\Lib\asyncio\base_subprocess.py", line 126, in __del__
  File "C:\Program Files\Python312\Lib\asyncio\base_subprocess.py", line 104, in close
  File "C:\Program Files\Python312\Lib\asyncio\proactor_events.py", line 109, in close
  File "C:\Program Files\Python312\Lib\asyncio\base_events.py", line 772, in call_soon
  File "C:\Program Files\Python312\Lib\asyncio\base_events.py", line 519, in _check_closed
RuntimeError: Event loop is closed
